Add support for Mac media keys
This change requires changing the deployment target version to 10.11
due to the requirements of the media key listener library.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ before_install:
   - brew update >/dev/null
   - brew list autoconf || brew install autoconf
   - brew list automake || brew install automake
+  - brew list carthage || brew install carthage
   - brew list doxygen || brew install doxygen
-  - brew uninstall libtool
-  - brew list libtool || brew install libtool
+  - brew uninstall libtool && brew install libtool
+  - carthage bootstrap
   - cd libmpdclient
   - sed -i .bak 's/libtoolize/glibtoolize/g' autogen.sh
   - ./autogen.sh
