Switch ID3v2 parser from Maku to imeji
imeji is an embedded album extractor written in C, designed to work with
the APIC frames found in ID3v2.3 and ID3v2.4 tags. It replaces the older
ID3v2 parser written in Swift and is hopefully faster and lighter on
memory usage.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libmpdclient"]
 	path = libmpdclient
 	url = git://git.musicpd.org/master/libmpdclient.git
+[submodule "imeji"]
+	path = imeji
+	url = https://github.com/arttuperala/imeji.git
