--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,14 @@ before_install:
   - brew uninstall libtool && brew install libtool
   - brew upgrade autoconf automake carthage libtool swiftlint || echo
   - carthage bootstrap
-  - cd libmpdclient
+  - cd Frameworks/libmpdclient
   - sed -i .bak 's/libtoolize/glibtoolize/g' autogen.sh
   - ./autogen.sh --disable-documentation
   - make
-  - cd ..
-  - cd imeji
+  - cd ../..
+  - cd Frameworks/imeji
   - make
-  - cd ..
+  - cd ../..
 install:
   - version_number=`git describe --tags --abbrev=0 2>/dev/null | sed s/^v//`
   - if [[ $version_number == "" ]]; then version_number="0.0"; fi
